RESOLVED FIXED14133
Runaway JavaScript timer fires when spinning around in Google Maps street view
https://bugs.webkit.org/show_bug.cgi?id=14133
Summary Runaway JavaScript timer fires when spinning around in Google Maps street view
mitz
Reported 2007-06-13 21:56:10 PDT
If you hold down the left arrow key in Google Maps street view to take a look around you, sometimes the runaway JavaScript alert comes up. To reproduce, open the URL, click in the street view and press and hold down the left arrow key. This is not 100% reproducible.
Attachments
Backtrace when the timer fired (19.13 KB, text/plain)
2007-06-13 22:02 PDT, mitz
no flags
Another backtrace from when shouldInterruptScript was called (8.95 KB, text/plain)
2007-06-13 22:25 PDT, mitz
no flags
mitz
Comment 1 2007-06-13 22:02:08 PDT
Created attachment 15014 [details] Backtrace when the timer fired
mitz
Comment 2 2007-06-13 22:25:29 PDT
Created attachment 15015 [details] Another backtrace from when shouldInterruptScript was called
Anders Carlsson
Comment 3 2007-06-14 09:25:47 PDT
Committed revision 23526.
Note You need to log in before you can comment on or make changes to this bug.